# DORISdays2025

./: .gitignore  README.md  pyproject.toml
JupyterLab/intro/: doris_rinex.ipynb  dpod.ipynb  sp3_interpolation.ipynb
data/: dpod2020_041_freq_corr.txt  ssas6a20.b23357.e24001.DG_.sp3.001  ssas6a20.missing.data.sp3.001
dsoclasses/: ionex.py  itrf_realization.py
dsoclasses/argos_simulator/: detect.py  earth_coord.py  estimate.py  generate.py  kepler_eq.py  kepler_orbit.py  koko.py  mydoppler.py  orbit_plane.py  rotate.py  sph2xyz.py
dsoclasses/doris/: algorithms.py
dsoclasses/geodesy/: transformations.py
dsoclasses/gnss/: algorithms.py  atx.py  systems.py
dsoclasses/orbits/: elements.py  interpolator.py  interpolator_obsolete.py  sp3c.py
dsoclasses/rinex/doris/: rinex.py
dsoclasses/rinex/gnss/: rinex.py
dsoclasses/sinex/: dpod.py  sinex.py
dsoclasses/time/: calmjd.py  gast.py  pyattotime.py
dsoclasses/troposphere/: gmf.py  gpt3.py  tropo.py  vmf3.py  vmf3_coeffs.npz
