[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DsoAcademicSoftware"
version = "0.1.2"
#dynamic = ["version",]
authors = [
  { name="Demitris Anastasiou", email="danastasiou@mail.ntua.gr" },
  { name="Xanthos Papanikolaou", email="xanthos@mail.ntua.gr" },
  { name="Vangelis Zacharis", email="vanzach@mail.ntua.gr" },
]
description = "."
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'scipy',
  'cartopy',
  'attotime'
]

[project.urls]
Repository = "https://github.com/idsdorisorg/DORISdays2025.git"

[project.scripts]

# Specify the packages/modules
[tool.hatch.build]
include = ["dsoclasses/", "bin/"]

[tool.hatch.build.targets.sdist]
include = ["dsoclasses/", "bin/"]

[tool.hatch.build.targets.wheel]
include = ["dsoclasses/", "bin/"]
